--- a/package.json
+++ b/package.json
@@ -1,24 +1,34 @@
 {
+  "name": "full-stack-app-frontend",
+  "version": "1.0.0",
+  "private": true,
   "dependencies": {
-    "-": "^0.0.1",
-    "add": "^2.0.6",
-    "backend": "^0.0.0",
-    "copilot": "^0.5.1",
-    "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "g": "^2.0.1",
-    "git": "^0.1.5",
-    "github": "^14.0.0",
-    "http": "^0.0.1-security",
-    "login": "^0.8.0",
-    "mkdir": "^0.0.2",
-    "netlify": "^13.2.0",
-    "react-router-dom": "^7.1.1",
-    "recharts": "^2.15.0",
-    "render": "^0.1.4",
-    "sass": "^1.83.1",
-    "vercel": "^32.3.0",
-    "ws": "^8.18.0",
-    "y": "^0.3.2"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "recharts": "^2.1.9"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
